--- a/.gitignore
+++ b/.gitignore
@@ -159,10 +159,15 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+.vscode/*
 
-dump_data.json
-Makefile
-*node_modules/*
+node_modules
 package-lock.json
 
-.vscode/settings.json
+# Logs
+logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
