--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "classnames": "^2.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
