--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,11 @@
     "@headlessui/react": "^2.1.2",
     "@mui/icons-material": "^5.16.3",
     "@mui/material": "^5.16.1",
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "zustand": "^4.5.2",
-    "classnames": "^2.5.1"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
